# netease-music-cloud-uploader

./: .eslintrc.commit.json  .eslintrc.json  .gitignore  .lintstagedrc  .prettierrc  README.md  changelog.yaml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/actions/action-release/: .gitignore  action.yml  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
design/: icon.sketch
public/js/: font_3987937_0uw2ckdw7sr.js  font_3987937_73i9sqj9lt.js  font_3987937_asadl2mn7if.js  font_3987937_byuglssel9w.js
src/: App.module.scss  App.tsx  Root.tsx  apis.ts  main.tsx  models.ts  rq.ts  styles.css  utils.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/AppMenu/: AppMenu.module.scss  AppMenu.tsx  index.ts
src/components/Button/: Button.module.scss  Button.tsx  index.ts
src/components/CloudTable/: CloudTable.module.scss  CloudTable.tsx  index.ts
src/components/ConfirmModal/: ConfirmModal.module.scss  ConfirmModal.tsx  index.ts
src/components/EditFileModal/: EditFileModal.module.scss  EditFileModal.tsx  index.ts
src/components/IconFont/: IconFont.module.scss  IconFont.tsx  index.ts
src/components/Input/: Input.module.scss  Input.tsx  index.ts
src/components/MatchSongModal/: MatchSongModal.module.scss  MatchSongModal.tsx  index.ts
src/contexts/: UserInfoContext.ts
src/hooks/: useDisableDrop.ts  useSetMemoryCookie.ts  useUserInfo.ts  useValueOnChange.ts
src/providers/: UserInfoProvider.tsx
src/utils/: common.ts  cookie.ts
(+25 files in other folders)
