[package]
name = "netease-music-cloud-uploader"
version = "1.0.0"
description = "A Tauri App"
authors = ["ovnrain"]
license = "MIT"
repository = "https://github.com/ovnrain/netease-music-cloud-uploader.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.4", features = ["fs-all", "http-all", "path-all", "shell-open"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
